--- a/AuthSystem/Views/Home/Chat.cshtml
+++ b/AuthSystem/Views/Home/Chat.cshtml
@@ -10,6 +10,11 @@
 <div class="container chat-container">
     <h2> Room</h2>
 
+    <div class="chat-buttons">
+        <a class="btn btn-success" asp-area="Identity" asp-page="/Chat/CreateChatRoom">Create Chat Room</a>
+        <a class="btn btn-success" asp-area="Identity" asp-page="/Chat/ChatRooms">View Chat Room</a>
+    </div>
+
     <div class="chat-content-container">
         <div class="chat-content">
             <div class="chat-box" id="chatBox">
@@ -27,12 +32,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="mt-3">
-                <a class="btn btn-success" asp-area="Identity" asp-page="/Chat/CreateChatRoom">Create Chat Room</a>
-                <a class="btn btn-success" asp-area="Identity" asp-page="/Chat/ChatRooms">View Chat Room</a>
-            </div>
-
         </div>
     </div>
 </div>
@@ -104,17 +103,17 @@
 
             if (messageObj.userName === "@userEmail") {
                 const messageContent = `
-                                            <div class="message">${messageObj.text}</div>
-                                            <div class="time">${new Date(messageObj.timestamp).toLocaleTimeString()}</div>
-                                        `;
+                                                            <div class="message">${messageObj.text}</div>
+                                                            <div class="time">${new Date(messageObj.timestamp).toLocaleTimeString()}</div>
+                                                        `;
                 li.classList.add("sent");
                 li.innerHTML = messageContent;
             } else {
                 const messageContent = `
-                                            <div class="username">${messageObj.userName}</div>
-                                            <div class="message">${messageObj.text}</div>
-                                            <div class="time">${new Date(messageObj.timestamp).toLocaleTimeString()}</div>
-                                        `;
+                                                            <div class="username">${messageObj.userName}</div>
+                                                            <div class="message">${messageObj.text}</div>
+                                                            <div class="time">${new Date(messageObj.timestamp).toLocaleTimeString()}</div>
+                                                        `;
                 li.classList.add("received");
                 li.innerHTML = messageContent;
             }
