--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" asp-controller="Home" asp-action="Chat">Chat</a>
                                 </li>
+                                /*<li class="nav-item">
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Chat/SupportBot">Support</a>
+                                </li>*/
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">User Management</a>
                                 </li>
