--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -31,8 +31,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Home</a>
                                 </li>
-                                <li class="nav-item">
+                                /*<li class="nav-item">
                                     <a class="nav-link" asp-controller="Home" asp-action="Chat">Chat</a>
+                                </li>*/
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Chat/GlobalChat">Global</a>
                                 </li>
                                 /*<li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Chat/SupportBot">Support</a>
