--- a/AuthSystem/wwwroot/css/Chat/userChat.css
+++ b/AuthSystem/wwwroot/css/Chat/userChat.css
@@ -17,6 +17,12 @@
     display: flex;
     flex-direction: column;
 }
+.chat-image img {
+    width: 200px; /* Adjust this value as needed */
+    height: 200px; /* Adjust this value as needed */
+    width: auto;
+    height: auto;
+}
 
 .chat-box {
     flex: 1;
